# react-native-test-module

./: CONTRIBUTING.md  README.md  package.json  react-native-test-module.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/testmodule/: TestModuleModule.java  TestModulePackage.java
cpp/: react-native-test-module.cpp  react-native-test-module.h
example/: package.json
example/android/app/src/main/java/com/testmoduleexample/: MainApplication.kt
example/ios/: Podfile
example/ios/TestModuleExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: TestModule.h  TestModule.mm
src/: NativeTestModule.ts  index.tsx
